fix: hide scrollbar in chrome

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,3 +2,7 @@ body {
   background: #f2f2f2;
   color: #282828;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
